# AutoTheme

./: CMakeLists.txt  Main.cpp  PCH.h  README.md
Resources/: Resource.rc
